--- a/src/index.html
+++ b/src/index.html
@@ -30,12 +30,110 @@
             var markers = [];
 
             function initMap() {
+
+                var styles = [{
+                    "featureType": "road.highway",
+                    "elementType": "labels",
+                    "stylers": [{
+                        "visibility": "on"
+                    }]
+                }, {
+                    "featureType": "road.arterial",
+                    "elementType": "labels.text",
+                    "stylers": [{
+                        "visibility": "on"
+                    }]
+                }, {
+                    "featureType": "road.local",
+                    "elementType": "labels.text",
+                    "stylers": [{
+                        "visibility": "on"
+                    }]
+                }, {
+                    "featureType": "water",
+                    "elementType": "geometry.fill",
+                    "stylers": [{
+                        "color": "#0099dd"
+                    }]
+                }, {
+                    "featureType": "poi.park",
+                    "elementType": "geometry.fill",
+                    "stylers": [{
+                        "color": "#aadd55"
+                    }]
+                }, {
+                    featureType: 'administrative',
+                    elementType: 'labels.text.stroke',
+                    stylers: [{
+                        color: '#ffffff'
+                    }, {
+                        weight: 6
+                    }]
+                }, {
+                    featureType: 'administrative',
+                    elementType: 'labels.text.fill',
+                    stylers: [{
+                        color: '#e85113'
+                    }]
+                }, {
+                    featureType: 'road.highway',
+                    elementType: 'geometry.stroke',
+                    stylers: [{
+                        color: '#efe9e4'
+                    }, {
+                        lightness: -40
+                    }]
+                }, {
+                    featureType: 'transit.station',
+                    stylers: [{
+                        weight: 9
+                    }, {
+                        hue: '#e85113'
+                    }]
+                }, {
+                    featureType: 'road.highway',
+                    elementType: 'labels.icon',
+                    stylers: [{
+                        visibility: 'off'
+                    }]
+                }, {
+                    featureType: 'water',
+                    elementType: 'labels.text.stroke',
+                    stylers: [{
+                        lightness: 100
+                    }]
+                }, {
+                    featureType: 'water',
+                    elementType: 'labels.text.fill',
+                    stylers: [{
+                        lightness: -100
+                    }]
+                }, {
+                    featureType: 'poi',
+                    elementType: 'geometry',
+                    stylers: [{
+                        visibility: 'on'
+                    }, {
+                        color: '#f0e4d3'
+                    }]
+                }, {
+                    featureType: 'road.highway',
+                    elementType: 'geometry.fill',
+                    stylers: [{
+                        color: '#efe9e4'
+                    }, {
+                        lightness: -25
+                    }]
+                }];
+
                 map = new google.maps.Map(document.getElementById('map'), {
                     center: {
                         lat: 40.755781,
                         lng: -73.987548
                     },
-                    zoom: 15
+                    zoom: 12,
+                    styles: styles,
+                    mapTypeControl: false
                 });
                 var locations = [{
                     title: 'Times Square',
@@ -137,12 +235,20 @@
 
                 var largeInfoWindow = new google.maps.InfoWindow();
 
+                var defaultIcon = makeMarkerIcon('0091ff');
+
+                var highlightedIcon = makeMarkerIcon('ffff24');
+
+                var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+
                 for (var i = 0; i < locations.length; i++) {
                     var position = locations[i].location;
                     var title = locations[i].title;
                     var marker = new google.maps.Marker({
                         position: position,
                         title: title,
+                        icon: defaultIcon,
+                        label: labels[i],
                         animation: google.maps.Animation.DROP,
                         id: i
                     });
@@ -152,6 +258,16 @@
                     marker.addListener('click', function() {
                         populateInfoWindow(this, largeInfoWindow);
                     });
+
+                    marker.addListener('mouseover', function() {
+                        this.setIcon(highlightedIcon);
+                    });
+
+                    marker.addListener('mouseout', function() {
+                        this.setIcon(defaultIcon);
+                    });
+
+
                 }
                 document.getElementById('show-listings').addEventListener('click', showListings);
                 document.getElementById('hide-listings').addEventListener('click', hideListings);
@@ -160,14 +276,40 @@
             function populateInfoWindow(marker, infowindow) {
                 if (infowindow.marker != marker) {
                     infowindow.marker = marker;
-                    infowindow.setContent('<div>' + marker.title + '</div>');
+
+                    infowindow.setContent('');
                     infowindow.open(map, marker);
 
                     infowindow.addListener('closeClick', function() {
-                        infowindow.setMarker(null);
+                        infowindow.marker = null;
                     });
+                    var streetViewService = new google.maps.StreetViewService();
+                    var radius = 50;
+
+                    function getStreetView(data, status) {
+                        if (status == google.maps.StreetViewStatus.OK) {
+                            var nearStreetViewLocation = data.location.latLng;
+                            var heading = google.maps.geometry.spherical.computeHeading(nearStreetViewLocation, marker.position);
+                            var info = '<div>' + marker.title + '</div><div id="pano"></div>';
+                            infowindow.setContent(info);
+                            var panoramaOptions = {
+                                position: nearStreetViewLocation,
+                                pov: {
+                                    heading: heading,
+                                    pitch: 30
+                                }
+                            };
+                            var panorama = new google.maps.StreetViewPanorama(document.getElementById('pano'), panoramaOptions);
+                        } else {
+                            infowindow.setContent('<div>' + marker.title + '</div><div>No Street View Found');
+                        }
+                    }
+                    streetViewService.getPanoramaByLocation(marker.position, radius, getStreetView);
+
+                    infowindow.open(map, marker);
                 }
             }
+
 
             function showListings() {
                 var bounds = new google.maps.LatLngBounds();
@@ -184,10 +326,21 @@
                     markers[i].setMap(null);
                 }
             }
+
+            function makeMarkerIcon(markerColor) {
+                var markerImage = new google.maps.MarkerImage(
+                    'http://chart.googleapis.com/chart?chst=d_map_spin&chld=1.15|0|' + markerColor +
+                    '|40|_|%E2%80%A2',
+                    new google.maps.Size(21, 34),
+                    new google.maps.Point(0, 0),
+                    new google.maps.Point(10, 34),
+                    new google.maps.Size(21, 34));
+                return markerImage;
+            }
         </script>
 
 
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4Sx-EmG0FVrUBwkOuk9Btwv2cW3jjuZg&v=3&callback=initMap">
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4Sx-EmG0FVrUBwkOuk9Btwv2cW3jjuZg&libraries=geometry&v=3&callback=initMap">
         </script>
         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" />-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
