--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
                 <div>
                     <input id="show-listings" type="button" value="Show Listings">
                     <input id="hide-listings" type="button" value="Hide Listings">
+                    <hr>
+                    <span class="text">Draw a shape to search within it for homes!</span>
+                    <input id="toggle-drawing" type="button" value="Drawing Tools">
                 </div>
             </div>
             <div id="map"></div>
@@ -28,6 +31,8 @@
             var map;
 
             var markers = [];
+
+            var polygon = null;
 
             function initMap() {
 
@@ -235,6 +240,15 @@
 
                 var largeInfoWindow = new google.maps.InfoWindow();
 
+                var drawingManager = new google.maps.drawing.DrawingManager({
+                    drawingMode: google.maps.drawing.OverlayType.POLYGON,
+                    drawingControl: true,
+                    drawingControlOptions: {
+                        position: google.maps.ControlPosition.TOP_LEFT,
+                        drawingModes: [google.maps.drawing.OverlayType.POLYGON]
+                    }
+                });
+
                 var defaultIcon = makeMarkerIcon('0091ff');
 
                 var highlightedIcon = makeMarkerIcon('ffff24');
@@ -271,6 +285,29 @@
                 }
                 document.getElementById('show-listings').addEventListener('click', showListings);
                 document.getElementById('hide-listings').addEventListener('click', hideListings);
+
+                document.getElementById('toggle-drawing').addEventListener('click', function() {
+                    toggleDrawing(drawingManager);
+                });
+
+                drawingManager.addListener('overlaycomplete', function(event) {
+                    // First, check if there is an existing polygon.
+                    // If there is, get rid of it and remove the markers
+                    if (polygon) {
+                        polygon.setMap(null);
+                        hideListings(markers);
+                    }
+                    // Switching the drawing mode to the HAND (i.e., no longer drawing).
+                    drawingManager.setDrawingMode(null);
+                    // Creating a new editable polygon from the overlay.
+                    polygon = event.overlay;
+                    polygon.setEditable(true);
+                    // Searching within the polygon.
+                    searchWithinPolygon();
+                    // Make sure the search is re-done if the poly is changed.
+                    polygon.getPath().addListener('set_at', searchWithinPolygon);
+                    polygon.getPath().addListener('insert_at', searchWithinPolygon);
+                });
             }
 
             function populateInfoWindow(marker, infowindow) {
@@ -337,10 +374,31 @@
                     new google.maps.Size(21, 34));
                 return markerImage;
             }
+
+            function toggleDrawing(drawingManager) {
+                if (drawingManager.map) {
+                    drawingManager.setMap(null);
+                    if (polygon !== null) {
+                        polygon.setMap(null);
+                    }
+                } else {
+                    drawingManager.setMap(map);
+                }
+            }
+
+            function searchWithinPolygon() {
+                for (var i = 0; i < markers.length; i++) {
+                    if (google.maps.geometry.poly.containsLocation(markers[i].position, polygon)) {
+                        markers[i].setMap(map);
+                    } else {
+                        markers[i].setMap(null);
+                    }
+                }
+            }
         </script>
 
 
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4Sx-EmG0FVrUBwkOuk9Btwv2cW3jjuZg&libraries=geometry&v=3&callback=initMap">
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4Sx-EmG0FVrUBwkOuk9Btwv2cW3jjuZg&libraries=drawing,geometry&v=3&callback=initMap">
         </script>
         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" />-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
