--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,11 @@
                     <span class="text">Draw a shape to search within it for homes!</span>
                     <input id="toggle-drawing" type="button" value="Drawing Tools">
                 </div>
+                <hr>
+                <div>
+                    <input id="zoom-to-area-text" type="text" placeholder="Enter your favorite area!">
+                    <input id="zoom-to-area" type="button" value="zoom">
+                </div>
             </div>
             <div id="map"></div>
         </div>
@@ -290,6 +295,10 @@
                     toggleDrawing(drawingManager);
                 });
 
+                document.getElementById('zoom-to-area').addEventListener('click', function() {
+                    zoomToArea();
+                });
+
                 drawingManager.addListener('overlaycomplete', function(event) {
                     // First, check if there is an existing polygon.
                     // If there is, get rid of it and remove the markers
@@ -394,6 +403,29 @@
                     } else {
                         markers[i].setMap(null);
                     }
+                }
+            }
+
+            function zoomToArea() {
+                var geocoder = new google.maps.Geocoder();
+                var address = document.getElementById('zoom-to-area-text').value;
+
+                if (address === '') {
+                    window.alert('you must enter an area or address.');
+                } else {
+                    geocoder.geocode({
+                        address: address,
+                        componentRestrictions: {
+                            locality: 'New York'
+                        }
+                    }, function(results, status) {
+                        if (status == google.maps.GeocoderStatus.OK) {
+                            map.setCenter(results[0].geometry.location);
+                            map.setZoom(15);
+                        } else {
+                            window.alert('We could not find that location - try entering a more specific place.');
+                        }
+                    });
                 }
             }
         </script>
