--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,25 @@
                     <input id="zoom-to-area-text" type="text" placeholder="Enter your favorite area!">
                     <input id="zoom-to-area" type="button" value="zoom">
                 </div>
+                <hr>
+                <div>
+                    <span class="text">Within </span>
+                    <select id="max-duration">
+                        <option value="10">10 min</option>
+                        <option value="15">15 min</option>
+                        <option value="30">30 min</option>
+                        <option value="60">60 min</option>
+                    </select>
+                    <select id="mode">
+                        <option value="DRIVING">Drive</option>
+                        <option value="WALKING">Walk</option>
+                        <option value="BICYCLING">Bike</option>
+                        <option value="TRANSIT">Transit Ride</option>
+                    </select>
+                    <span class="text">of</span>
+                    <input id="search-within-time-text" type="text" placeholder="5 Times Square, NY">
+                    <input id="search-within-time" type="button" value="Go">
+                </div>
             </div>
             <div id="map"></div>
         </div>
