--- a/src/index.html
+++ b/src/index.html
@@ -164,6 +164,15 @@
                     styles: styles,
                     mapTypeControl: false
                 });
+
+                var timeAutocomplete = new google.maps.places.Autocomplete(
+                    document.getElementById('search-within-time-text'));
+
+                var zoomAutocomplete = new google.maps.places.Autocomplete(
+                    document.getElementById('zoom-to-area-text'));
+
+                zoomAutocomplete.bindTo('bounds', map);
+
                 var locations = [{
                     title: 'Times Square',
                     location: {
@@ -318,6 +327,10 @@
                     zoomToArea();
                 });
 
+                document.getElementById('search-within-time').addEventListener('click', function() {
+                    searchWithinTime();
+                });
+
                 drawingManager.addListener('overlaycomplete', function(event) {
                     // First, check if there is an existing polygon.
                     // If there is, get rid of it and remove the markers
@@ -447,10 +460,110 @@
                     });
                 }
             }
+
+            function searchWithinTime() {
+                var distanceMatrixService = new google.maps.DistanceMatrixService;
+                var address = document.getElementById('search-within-time-text').value;
+
+                if (address === '') {
+                    window.alert('You must enter an address.');
+                } else {
+                    hideListings();
+
+                    var origins = [];
+                    for (var i = 0; i < markers.length; i++) {
+                        origins[i] = markers[i].position;
+                    }
+                    var destination = address;
+                    var mode = document.getElementById('mode').value;
+
+                    distanceMatrixService.getDistanceMatrix({
+                        origins: origins,
+                        destinations: [destination],
+                        travelMode: google.maps.TravelMode[mode],
+                        unitSystem: google.maps.UnitSystem.IMPERIAL,
+                    }, function(response, status) {
+                        if (status !== google.maps.DistanceMatrixStatus.OK) {
+                            window.alert('Error was: ' + status);
+                        } else {
+                            displayMarkersWithinTime(response);
+                        }
+                    });
+                }
+            }
+
+            function displayMarkersWithinTime(response) {
+                var maxDuration = document.getElementById('max-duration').value;
+                var origins = response.originAddresses;
+                var destinations = response.destinationAddresses;
+
+                var atLeastOne = false;
+                for (var i = 0; i < origins.length; i++) {
+                    var results = response.rows[i].elements;
+                    for (var j = 0; j < results.length; j++) {
+                        var element = results[j];
+                        if (element.status === "OK") {
+
+                            var distanceText = element.distance.text;
+
+                            var duration = element.duration.value / 60;
+                            var durationText = element.duration.text;
+                            if (duration <= maxDuration) {
+
+                                markers[i].setMap(map);
+                                atLeastOne = true;
+
+                                var infowindow = new google.maps.InfoWindow({
+                                    content: durationText + ' away, ' + distanceText +
+                                        '<div><input type=\"button\" value=\"View Route\" onclick=' +
+                                        '\"displayDirections(&quot;' + origins[i] + '&quot;);\"></input></div>'
+                                });
+
+                                infowindow.open(map, markers[i]);
+
+                                markers[i].infowindow = infowindow;
+                                google.maps.event.addListener(markers[i], 'click', function() {
+                                    this.infowindow.close();
+                                });
+                            }
+                        }
+                    }
+                }
+                if (!atLeastOne) {
+                    window.alert('We could not find any locations within that distance!');
+                }
+            }
+
+            function displayDirections(origin) {
+                hideListings();
+                var directionsService = new google.maps.DirectionsService;
+
+                var destinationAddress = document.getElementById('search-within-time-text').value;
+
+                var mode = document.getElementById('mode').value;
+                directionsService.route({
+                    origin: origin,
+                    destination: destinationAddress,
+                    travelMode: google.maps.TravelMode[mode]
+                }, function(response, status) {
+                    if (status === google.maps.DirectionsStatus.OK) {
+                        var directionsDisplay = new google.maps.DirectionsRenderer({
+                            map: map,
+                            directions: response,
+                            draggable: true,
+                            polylineOptions: {
+                                strokeColor: 'green'
+                            }
+                        });
+                    } else {
+                        window.alert('Directions request failed due to ' + status);
+                    }
+                })
+            }
         </script>
 
 
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4Sx-EmG0FVrUBwkOuk9Btwv2cW3jjuZg&libraries=drawing,geometry&v=3&callback=initMap">
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4Sx-EmG0FVrUBwkOuk9Btwv2cW3jjuZg&libraries=places,drawing,geometry&v=3&callback=initMap">
         </script>
         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>-->
