--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,12 @@
                     <input id="search-within-time-text" type="text" placeholder="5 Times Square, NY">
                     <input id="search-within-time" type="button" value="Go">
                 </div>
+                <hr>
+                <div>
+                    <span class="text">Search for Nearby Places</span>
+                    <input id="places-search" type="text" placeholder="Ex: Pizza delivery in NYC">
+                    <input id="go-places" type="button" value="Go">
+                </div>
             </div>
             <div id="map"></div>
         </div>
@@ -57,6 +63,8 @@
             var markers = [];
 
             var polygon = null;
+
+            var placeMarkers = [];
 
             function initMap() {
 
@@ -171,7 +179,12 @@
                 var zoomAutocomplete = new google.maps.places.Autocomplete(
                     document.getElementById('zoom-to-area-text'));
 
+                timeAutocomplete.bindTo('bounds', map);
                 zoomAutocomplete.bindTo('bounds', map);
+
+                var searchBox = new google.maps.places.SearchBox(
+                    document.getElementById('places-search'));
+                searchBox.setBounds(map.getBounds());
 
                 var locations = [{
                     title: 'Times Square',
@@ -331,6 +344,12 @@
                     searchWithinTime();
                 });
 
+                searchBox.addListener('places-changed', function() {
+                    searchBoxPlaces(this);
+                });
+
+                document.getElementById('go-places').addEventListener('click', textSearchPlaces);
+
                 drawingManager.addListener('overlaycomplete', function(event) {
                     // First, check if there is an existing polygon.
                     // If there is, get rid of it and remove the markers
@@ -400,7 +419,7 @@
                 map.fitBounds(bounds);
             }
 
-            function hideListings() {
+            function hideListings(markers) {
                 for (var i = 0; i < markers.length; i++) {
                     markers[i].setMap(null);
                 }
@@ -468,7 +487,7 @@
                 if (address === '') {
                     window.alert('You must enter an address.');
                 } else {
-                    hideListings();
+                    hideListings(markers);
 
                     var origins = [];
                     for (var i = 0; i < markers.length; i++) {
@@ -535,7 +554,7 @@
             }
 
             function displayDirections(origin) {
-                hideListings();
+                hideListings(markers);
                 var directionsService = new google.maps.DirectionsService;
 
                 var destinationAddress = document.getElementById('search-within-time-text').value;
@@ -560,6 +579,59 @@
                     }
                 })
             }
+
+            function searchBoxPlaces(searchBox) {
+                hideListings(placeMarkers);
+                var places = searchbox.getplaces();
+                createMarkersForPlaces(places);
+                if (places.length === 0) {
+                    window.alert('We didn\'t find any places matching that search!');
+                }
+            }
+
+            function textSearchPlaces() {
+                var bounds = map.getBounds();
+
+                hideListings(placeMarkers);
+                var placesService = new google.maps.places.PlacesService(map);
+                placesService.textSearch({
+                    query: document.getElementById('places-search').value,
+                    bounds: bounds
+                }, function(results, status) {
+                    if (status === google.maps.places.PlacesServiceStatus.OK) {
+                        createMarkersForPlaces(results);
+                    }
+                });
+            }
+
+            function createMarkersForPlaces(places) {
+                var bounds = new google.maps.LatLngBounds();
+                for (var i = 0; i < places.length; i++) {
+                    var place = places[i];
+                    var icon = {
+                        url: place.icon,
+                        size: new google.maps.Size(35, 35),
+                        origin: new google.maps.Point(0, 0),
+                        anchor: new google.maps.Point(15, 34),
+                        scaledSize: new google.maps.Size(25, 25)
+                    };
+
+                    var marker = new google.maps.Marker({
+                        map: map,
+                        icon: icon,
+                        title: place.name,
+                        position: place.geometry.location,
+                        id: place.id
+                    });
+                    placeMarkers.push(marker);
+                    if (place.geometry.viewport) {
+                        bounds.union(place.geometry.viewport)
+                    } else {
+                        bounds.extend(place.geometry.location);
+                    }
+                }
+                map.fitBounds(bounds);
+            }
         </script>
 
 
@@ -576,3 +648,4 @@
     </footer>
 
 </html>
+tml>
