--- a/src/index.html
+++ b/src/index.html
@@ -577,7 +577,7 @@
                     } else {
                         window.alert('Directions request failed due to ' + status);
                     }
-                })
+                });
             }
 
             function searchBoxPlaces(searchBox) {
@@ -621,16 +621,68 @@
                         icon: icon,
                         title: place.name,
                         position: place.geometry.location,
-                        id: place.id
+                        id: place.place_id
+                    });
+                    var placeInfoWindow = new google.maps.InfoWindow();
+                    marker.addListener('click', function() {
+                        if (placeInfoWindow.marker === this) {
+                            console.log("This infowindow already is on this marker!");
+                        } else {
+                            getPlacesDetails(this, placeInfoWindow);
+                            console.log('going into getPlacesDetails.');
+                        }
                     });
                     placeMarkers.push(marker);
                     if (place.geometry.viewport) {
-                        bounds.union(place.geometry.viewport)
+                        bounds.union(place.geometry.viewport);
                     } else {
                         bounds.extend(place.geometry.location);
                     }
                 }
                 map.fitBounds(bounds);
+            }
+
+            function getPlacesDetails(marker, infowindow) {
+                var service = new google.maps.places.PlacesService(map);
+                service.getDetails({
+                    placeId: marker.id
+                }, function(place, status) {
+                    if (status === google.maps.places.PlacesServiceStatus.OK) {
+                        infowindow.marker = marker;
+                        var innerHTML = '<div>';
+                        if (place.name) {
+                            innerHTML += '<strong>' + place.name + '</strong>';
+                        }
+                        if (place.formatted_address) {
+                            innerHTML += '<br>' + place.formatted_address;
+                        }
+                        if (place.formatted_phone_number) {
+                            innerHTML += '<br>' + place.formatted_phone_number;
+                        }
+                        if (place.opening_hours) {
+                            innerHTML += '<br><br><strong>Hours:</strong><br>' +
+                                place.opening_hours.weekday_text[0] + '<br>' +
+                                place.opening_hours.weekday_text[1] + '<br>' +
+                                place.opening_hours.weekday_text[2] + '<br>' +
+                                place.opening_hours.weekday_text[3] + '<br>' +
+                                place.opening_hours.weekday_text[4] + '<br>' +
+                                place.opening_hours.weekday_text[5] + '<br>' +
+                                place.opening_hours.weekday_text[6];
+                        }
+                        if (place.photos) {
+                            innerHTML += '<br><br><img src="' + place.photos[0].getUrl({
+                                maxHeight: 100,
+                                maxWidth: 200
+                            }) + '">';
+                        }
+                        innerHTML += '</div>';
+                        infowindow.setContent(innerHTML);
+                        infowindow.open(map, marker);
+                        infowindow.addListener('closeclick', function() {
+                            infowindow.marker = null;
+                        });
+                    }
+                });
             }
         </script>
 
